--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: mydb
     volumes:
-      - ./db_data:/var/lib/postgresql/data      
+      - ./pgsql/db_data:/var/lib/postgresql/data      
     ports:
       - "5432:5432"
   pgadmin:
